possible fix for blurry logoäfter download

--- a/src/styles/pages/_dp-viola.scss
+++ b/src/styles/pages/_dp-viola.scss
@@ -236,9 +236,9 @@
     .box-4 {
       .logo {
         position: relative;
-        // background-image: url('../../../public/images/png/devfest-lg-logo.png');
-        // background-size: contain;
-        // background-repeat: no-repeat;
+        // background-image: url('../../../public/images/svg/devfest--logo.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
         width: 600px;
         height: 150px;
       }
